tests/baselines/reference/parserForOfStatement10.errors.txt
parserForOfStatement10.ts(1,17): error TS2304: Cannot find name 'X'.


==== parserForOfStatement10.ts (1 errors) ====
    for (const v of X) {
                    ~
!!! error TS2304: Cannot find name 'X'.
    }